# EV_Energy_FL

./: .gitmodules  LICENSE  README.md  pyproject.toml
histogram-based/jobs/fever_2_histogram_uniform_split_uniform_lr/: meta.json
histogram-based/jobs/fever_2_histogram_uniform_split_uniform_lr/app_site-1/config/: config_fed_client.json
histogram-based/jobs/fever_5_histogram_uniform_split_uniform_lr/: meta.json
utils/: data_processing.py
workspaces/xgboost_workspace_2_histogram_uniform_split_uniform_lr/simulate_job/: log.txt  test.model.json
workspaces/xgboost_workspace_2_histogram_uniform_split_uniform_lr/simulate_job/app_site-1/: log.txt
workspaces/xgboost_workspace_2_histogram_uniform_split_uniform_lr/simulate_job/app_site-2/: log.txt
workspaces/xgboost_workspace_2_histogram_uniform_split_uniform_lr/simulate_job/pool_stats/: simulator_cell_stats.json
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/app_site-1/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/app_site-2/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/app_site-3/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/app_site-4/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/app_site-5/: log.txt
workspaces/xgboost_workspace_5_histogram_uniform_split_uniform_lr/simulate_job/pool_stats/: simulator_cell_stats.json
(+14 files in other folders)
