[tool.poetry]
name = "ev-energy-fl"
version = "0.1.0"
description = ""
authors = ["WilliamLindskog <williamlindskog@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ev_energy_fl"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
